--- a/index.html
+++ b/index.html
@@ -158,20 +158,20 @@
             <div class="video-container">
                 <div class="video-wrapper">
                     <video controls>
-                        <source src="FIG/1.mp4" type="video/mp4">
+                        <source src="FIGS/1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
                 <div class="video-wrapper">
                     <video controls>
-                        <source src="FIG/1.mp4" type="video/mp4">
+                        <source src="FIGS/1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
                 <div class="arrow arrow-right">→</div>
                 <div class="video-wrapper">
                     <video controls>
-                        <source src="FIG/1.mp4" type="video/mp4">
+                        <source src="FIGS/1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
