--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         }
         .container {
             width: 80%;
+            max-width: 800px;
             margin: auto;
             overflow: hidden;
         }
@@ -48,8 +49,9 @@
         p {
             font-size: 1em;
             line-height: 1.6;
-            width: 100%;
+            max-width: 100%;
             box-sizing: border-box;
+            margin: 0 auto;
         }
         img {
             max-width: 100%;
@@ -122,6 +124,17 @@
             text-align: center;
             padding: 10px 0;
             margin-top: 20px;
+        }
+        @media (max-width: 600px) {
+            .container {
+                width: 100%;
+            }
+            .video-wrapper video {
+                max-width: 150px;
+            }
+            .arrow {
+                font-size: 1.5em;
+            }
         }
     </style>
 </head>
