--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="video-container">
                 <div class="video-wrapper">
                     <video controls>
-                        <source src="video1.mp4" type="video/mp4">
+                        <source src="FIGS/jumps/T.gif" type="video/gif">
                         Your browser does not support the video tag.
                     </video>
                 </div>
