--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #f4f4f4;
         }
         .container {
-            width: 80%;
+            width: 90%;
             max-width: 800px;
             margin: auto;
             overflow: hidden;
@@ -52,9 +52,10 @@
             max-width: 100%;
             box-sizing: border-box;
             margin: 0 auto;
+            text-align: justify; /* Adding this for justified alignment */
         }
         img {
-            max-width: 100%;
+            max-width: 90%; /* Scaling image to 80% */
             height: auto;
             display: block;
             margin: 0 auto;
@@ -64,21 +65,17 @@
             font-style: italic;
             text-align: center;
         }
-        .video-container {
+        .gif-container {
             display: flex;
             align-items: center;
             justify-content: space-around;
             margin-top: 20px;
             position: relative;
         }
-        .video-wrapper {
+        .gif-wrapper {
             position: relative;
             display: inline-block;
             text-align: center;
-        }
-        .video-wrapper video {
-            max-width: 200px;
-            height: auto;
         }
         .arrow {
             font-size: 2em;
@@ -129,7 +126,7 @@
             .container {
                 width: 100%;
             }
-            .video-wrapper video {
+            .gif-wrapper img {
                 max-width: 150px;
             }
             .arrow {
@@ -143,11 +140,14 @@
         <header>
             <h1>Retrieving Video for Augmented Human Motion Generation</h1>
             <div class="author-info">
-                <p>Beibei Jing, Youjia Zhang, Ruomiao Zhou, Zikai Song, Hefei Ling, Junqing Yu, Wei Yang<sup>*</sup></p>
-                <p>Huazhong University of Science and Technology</p>
+                Beibei Jing, Youjia Zhang, Ruomiao Zhou, Zikai Song, Hefei Ling, Junqing Yu, Wei Yang<sup>*</sup>
+            </div>
+            <div class="text-above">
+                Huazhong University of Science and Technology
             </div>
         </header>
         <div class="section">
+            <h2>Overview</h2>
             <img src="FIGS/fig1.png" alt="Method">
             <p>
                 RV2M first retrieves videos from Internet, more specifically YouTube, using input text prompt as query. For effective retrieval, we also optionally decompose the text into verb phrases and fetch anatomical videos and composite a reference video. We extract video features and use them to condition our the autoregressive motion generator for enhanced performances.
@@ -157,48 +157,117 @@
             <div class="section">
                 <h2>Abstract</h2>
                 <p>
-                Text-driven human motion generation models, propelled by advancements in generative transformers and diffusion models, exhibit remarkable capabilities. However, they  still face considerable challenges due to a scarcity of motion capture data, leading to sub-optimal performance in responding to diverse, unconstrained prompts. In contrast, human activity videos are abundant on the Internet, surpass mocap data by orders of magnitude, yet remains under-utilized in motion generation. Drawing inspiration from the success of Retrieval Augmented Generation (RAG) in language modeling, this paper introduces a novel framework, RV2M, which integrates video retrieval into motion generation models to enhance their performance.Specifically, the framework incorporates a retrieval module designed to select reference videos from the Internet based on textual prompts. To address scenarios where no exact video match is found for a prompt, we propose a phrase-based retrieval and video composition scheme that maximizes the utilization of available video resources. Subsequently, we develop a video-conditioned autoregressive motion generator and formulate a training strategy that optimally leverages cross-modal data from videos to support the motion generation process.Extensive empirical evaluations reveal that our model outperforms existing state-of-the-art models across multiple metrics, and demonstrates robust adaptability to a wide range of expressions.
+                    Text-driven human motion generation models, propelled by advancements in generative transformers and diffusion models, exhibit remarkable capabilities. However, they  still face considerable challenges due to a scarcity of motion capture data, leading to sub-optimal performance in responding to diverse, unconstrained prompts. In contrast, human activity videos are abundant on the Internet, surpass mocap data by orders of magnitude, yet remains under-utilized in motion generation. 
+                   Drawing inspiration from the success of Retrieval Augmented Generation (RAG) in language modeling, this paper introduces a novel framework, RV2M, which integrates video retrieval into motion generation models to enhance their performance.
+                   Specifically, the framework incorporates a retrieval module designed to select reference videos from the Internet based on textual prompts. To address scenarios where no exact video match is found for a prompt, we propose a phrase-based retrieval and video composition scheme that maximizes the utilization of available video resources. Subsequently, we develop a video-conditioned autoregressive motion generator and formulate a training strategy that optimally leverages cross-modal data from videos to support the motion generation process.
+                   Extensive empirical evaluations reveal that our model outperforms existing state-of-the-art models across multiple metrics, and demonstrates robust adaptability to a wide range of expressions.
                 </p>
             </div>
             <div class="section">
                 <h2>Method</h2>
                 <img src="FIGS/pipline.png" alt="Method">
                 <p>
-                    In the first phase, we train a text-to-motion generation model using residual VQ-VAE and masked modeling. In the second phase, we select long textual prompts in the Human3D dataset, and retrieve corresponding videos, we only keep panoptic videos with high relevancy for training. We extract features from videos for condition and use the ground-truth motion in dataset for supervision we retrieve corresponding video descriptions via text, extracting video and text features separately to input into the model trained in the first step for generating human motions.
+                    In the first phase, we train a text-to-motion generation model using residual VQ-VAE and masked modeling. 
+                    In the second phase, we select long textual prompts in the Human3D dataset, and retrieve corresponding videos, we only keep panoptic videos with high relevancy for training. We extract features from videos for condition and use the ground-truth motion in dataset for supervision.
+                    we retrieve corresponding video descriptions via text, extracting video and text features separately to input into the model trained in the first step for generating human motions.
                 </p>
             </div>
             <h2>Results</h2>
             <div class="text-above">
-                “a person dribbles a basketball through their legs then runs quickly”
-            </div>
-            <div class="video-container">
-                <div class="video-wrapper">
-                    <video controls>
-                        <source src="FIGS/jumps/T.gif" type="video/gif">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="arrow arrow-right">→</div>
-                <div class="video-wrapper">
-                    <video controls>
-                        <source src="video2.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <div class="arrow arrow-right">→</div>
-                <div class="video-wrapper">
-                    <video controls>
-                        <source src="video3.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
+                “a person runs and then jumps.”
             </div>
             <div class="text-below">
-                <a href="https://www.youtube.com/watch?v=t99XjrJrNPY">https://www.youtube.com/watch?v=t99XjrJrNPY</a>
+                <a href="https://www.youtube.com/shorts/TIvoUjc2v54
+">https://www.youtube.com/shorts/TIvoUjc2v54
+</a>
+            <div class="gif-container">
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/jumps/T.gif" alt="GIF 1">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/jumps/V.gif" alt="GIF 2">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/jumps/F.gif" alt="GIF 3">
+                </div>
             </div>
+            <div>
+                <p>
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                </p>
+            </div>
+            <div class="text-above">
+                “a person dribbles a basketball through their legs then runs quickly.”
+            </div>
+            <div class="text-below">
+                <a href="https://www.youtube.com/watch?v=t99XjIrJnPY">https://www.youtube.com/watch?v=t99XjIrJnPY</a>
+            </div>
+            <div class="gif-container">
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/jumps/T.gif" alt="GIF 1">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/dribble/V.gif" alt="GIF 2">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/dribble/F.gif" alt="GIF 3">
+                </div>
+            </div>
+            <div>
+                <p>
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                </p>
+        </div>
+<div class="text-above">
+                “A person is performing a 360-degree spin jump.”
+            </div>
+            <div class="text-below">
+                <a href="https://www.youtube.com/watch?v=jamxtNEd1iw
+">https://www.youtube.com/watch?v=jamxtNEd1iw
+</a>
+            </div>
+            <div class="gif-container">
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/360/T.gif" alt="GIF 1">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/360/V.gif" alt="GIF 2">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/360/F.gif" alt="GIF 3">
+                </div>
+            </div>
+            <div>
+                <p>
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                </p>
+        </div>
+<div class="text-above">
+                “person is acting like a human monkey.”
+            </div>
+            <div class="text-below">
+                <a href="https://www.youtube.com/shorts/m5UlVKgOKSo?app=desktop
+">https://www.youtube.com/shorts/m5UlVKgOKSo?app=desktop
+</a>
+            </div>
+            <div class="gif-container">
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/monkey/T.gif" alt="GIF 1">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/monkey/V.gif" alt="GIF 2">
+                </div>
+                <div class="gif-wrapper">
+                    <img src="FIGS/crop/monkey/F.gif" alt="GIF 3">
+                </div>
+            </div>
+            <div>
+                <p>
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                </p>
         </div>
         <footer>
-            <p>&copy; 2024 Beibei Jing, Youjia Zhang, Ruomiao Zhou, Zikai Song, Hefei Ling, Junqing Yu, Wei Yang</p>
+            &copy; 2024 Beibei Jing, Youjia Zhang, Ruomiao Zhou, Zikai Song, Hefei Ling, Junqing Yu, Wei Yang
         </footer>
     </div>
 </body>
