--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/jumps/T.gif" alt="GIF 1">
+                    <img src="FIGS/dribble/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
                     <img src="FIGS/dribble/V.gif" alt="GIF 2">
