--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             text-align: justify; /* Adding this for justified alignment */
         }
         img {
-            max-width: 90%; /* Scaling image to 80% */
+            max-width: 90%; /* Scaling image to 90% */
             height: auto;
             display: block;
             margin: 0 auto;
@@ -115,6 +115,22 @@
             text-align: center;
             margin-top: 10px;
         }
+        .icon-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+            margin-top: 30px;
+        }
+        .icon-container a {
+            display: block;
+            width: 50px;
+            height: 50px;
+            margin: 0 40px; /* Add margin between icons */
+        }
+        .icon-container img {
+            max-width: 100%;
+            height: auto;
+        }
         footer {
             background: #333;
             color: #fff;
@@ -146,6 +162,11 @@
                 Huazhong University of Science and Technology
             </div>
         </header>
+        <div class="icon-container">
+            <a href="https://link1.com"><img src="FIGS/icons/paper.png" alt="Icon 1"></a>
+            <a href="https://github.com/HappyPiepie/RV2M/tree/main"><img src="FIGS/icons/github.png" alt="Icon 2"></a>
+            <a href="https://github.com/EricGuo5513/HumanML3D"><img src="FIGS/icons/database.svg" alt="Icon 3"></a>
+        </div>
         <div class="section">
             <h2>Overview</h2>
             <img src="FIGS/fig1.png" alt="Method">
@@ -157,7 +178,7 @@
             <div class="section">
                 <h2>Abstract</h2>
                 <p>
-                    Text-driven human motion generation models, propelled by advancements in generative transformers and diffusion models, exhibit remarkable capabilities. However, they  still face considerable challenges due to a scarcity of motion capture data, leading to sub-optimal performance in responding to diverse, unconstrained prompts. In contrast, human activity videos are abundant on the Internet, surpass mocap data by orders of magnitude, yet remains under-utilized in motion generation. 
+                    Text-driven human motion generation models, propelled by advancements in generative transformers and diffusion models, exhibit remarkable capabilities. However, they still face considerable challenges due to a scarcity of motion capture data, leading to sub-optimal performance in responding to diverse, unconstrained prompts. In contrast, human activity videos are abundant on the Internet, surpass mocap data by orders of magnitude, yet remains under-utilized in motion generation. 
                    Drawing inspiration from the success of Retrieval Augmented Generation (RAG) in language modeling, this paper introduces a novel framework, RV2M, which integrates video retrieval into motion generation models to enhance their performance.
                    Specifically, the framework incorporates a retrieval module designed to select reference videos from the Internet based on textual prompts. To address scenarios where no exact video match is found for a prompt, we propose a phrase-based retrieval and video composition scheme that maximizes the utilization of available video resources. Subsequently, we develop a video-conditioned autoregressive motion generator and formulate a training strategy that optimally leverages cross-modal data from videos to support the motion generation process.
                    Extensive empirical evaluations reveal that our model outperforms existing state-of-the-art models across multiple metrics, and demonstrates robust adaptability to a wide range of expressions.
@@ -182,18 +203,18 @@
 </a>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/jumps/T.gif" alt="GIF 1">
+                    <img src="FIGS/crop/jumps/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/jumps/V.gif" alt="GIF 2">
+                    <img src="FIGS/crop/jumps/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/jumps/F.gif" alt="GIF 3">
+                    <img src="FIGS/crop/jumps/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
                 <p>
-                   ----------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
             </div>
             <div class="text-above">
@@ -204,18 +225,18 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/dribble/T.gif" alt="GIF 1">
+                    <img src="FIGS/crop/dribble/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/dribble/V.gif" alt="GIF 2">
+                    <img src="FIGS/crop/dribble/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/dribble/F.gif" alt="GIF 3">
+                    <img src="FIGS/crop/dribble/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
                 <p>
-                   ----------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
         </div>
 <div class="text-above">
@@ -228,18 +249,18 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/360/T.gif" alt="GIF 1">
+                    <img src="FIGS/crop/360/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/360/V.gif" alt="GIF 2">
+                    <img src="FIGS/crop/360/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/360/F.gif" alt="GIF 3">
+                    <img src="FIGS/crop/360/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
                 <p>
-                    ----------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
         </div>
 <div class="text-above">
@@ -252,18 +273,18 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/monkey/T.gif" alt="GIF 1">
+                    <img src="FIGS/crop/monkey/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/monkey/V.gif" alt="GIF 2">
+                    <img src="FIGS/crop/monkey/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/monkey/F.gif" alt="GIF 3">
+                    <img src="FIGS/crop/monkey/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
                 <p>
-                    ----------------------------------------------------------------------------------------------------------------------------------------------
+                    -------------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </p>
         </div>
         <footer>
