--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
 </a>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/jumps/T.gif" alt="GIF 1">
+                    <img src="FIGS/jumps/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/jumps/V.gif" alt="GIF 2">
+                    <img src="FIGS/jumps/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/jumps/F.gif" alt="GIF 3">
+                    <img src="FIGS/jumps/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
@@ -225,13 +225,13 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/dribble/T.gif" alt="GIF 1">
+                    <img src="FIGS/dribble/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/dribble/V.gif" alt="GIF 2">
+                    <img src="FIGS/dribble/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/dribble/F.gif" alt="GIF 3">
+                    <img src="FIGS/dribble/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
@@ -249,13 +249,13 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/360/T.gif" alt="GIF 1">
+                    <img src="FIGS/360/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/360/V.gif" alt="GIF 2">
+                    <img src="FIGS/360/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/360/F.gif" alt="GIF 3">
+                    <img src="FIGS/360/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
@@ -273,13 +273,13 @@
             </div>
             <div class="gif-container">
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/monkey/T.gif" alt="GIF 1">
+                    <img src="FIGS/monkey/T.gif" alt="GIF 1">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/monkey/V.gif" alt="GIF 2">
+                    <img src="FIGS/monkey/V.gif" alt="GIF 2">
                 </div>
                 <div class="gif-wrapper">
-                    <img src="FIGS/crop/monkey/F.gif" alt="GIF 3">
+                    <img src="FIGS/monkey/F.gif" alt="GIF 3">
                 </div>
             </div>
             <div>
