--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <div class="section">
             <h2>Overview</h2>
             <img src="FIGS/fig1.png" alt="Method">
+            <img src="FIGS/overview.gif" alt="Method">
             <p>
                 RV2M first retrieves videos from Internet, more specifically YouTube, using input text prompt as query. For effective retrieval, we also optionally decompose the text into verb phrases and fetch anatomical videos and composite a reference video. We extract video features and use them to condition our the autoregressive motion generator for enhanced performances.
             </p>
