--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
             </div>
             <h2>Results</h2>
             <div class="text-above">
+                    <h3>Text to motion--------------------->Retrieve videos--------------------->Results</h3>
+            </div>
+            <div class="text-above">
                 “a person runs and then jumps.”
             </div>
             <div class="text-below">
